# twinmind.space

./: .gitignore  README.md  docker-compose.yml
BACKEND/: SCRIPTS_RUN.md  alembic.ini  pyproject.toml
BACKEND/app/: main.py
BACKEND/app/api/v1/: router.py
BACKEND/app/api/v1/routes/: auth.py  memory_routes.py
BACKEND/app/core/: config.py
BACKEND/app/db/: session.py
BACKEND/app/db/models/: user_model.py
BACKEND/app/functions/emails/: process_email_to_vector.py
BACKEND/app/functions/users/: auth_functions.py  jwt_provider.py
BACKEND/app/memory/: models.py  service.py
BACKEND/app/pydentic/: user_type.py
BACKEND/app/services/: call_llm_sequence.py  llm.py
BACKEND/memories/email_profiles/: charchimanas2018_at_gmail_com.md
BACKEND/migrations/: env.py
BACKEND/migrations/versions/: 06e8c540aa57_create_email_vectors.py  627e697c7909_modified_emialembedding.py  8040ba2a9180_update_google_login_and_access.py  818b7f09218f_modified_emials.py  89f662613b5b_change_user_model.py  8c3df8271b93_enable_pgvector.py  ab378f9e3276_modified_user.py  aefd5f14284d_create_memory_vectors.py  d48b0f0b9d73_change_refreh_token_database.py  d666dac2eab7_enable_pgvector.py  e16e60b74631_update_timeformat_by_adding_timezone_in_.py
MARKDOWN/: plan.md  plan.txt  todo.md
jupiter/: pyproject.toml
jupiter/test_agent/: agent_system.md  agents.ipynb  tool_calculator.md  tool_clock.md
jupiter/test_agent/.ipynb_checkpoints/: agents-checkpoint.ipynb
